Add in-app notifications

--- a/app/views/forum_threads/show.html.erb
+++ b/app/views/forum_threads/show.html.erb
@@ -5,7 +5,7 @@
 
 <% @forum_thread.forum_posts.includes(:user).each do |forum_post| %>
   <div>
-    <p><%= forum_post.user.email %> posted:</p>
+    <p><%= forum_post.user.username %> posted:</p>
     <%= simple_format forum_post.body %>
   </div>
 
