[Episode 100] Preload notifications with embedded JSON

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <a class="navbar-brand" href="#">GoRails Forum</a>
     <ul class="nav navbar-nav pull-right">
       <% if user_signed_in? %>
-        <li class="nav-item btn-group" data-behavior="notifications">
+        <li class="nav-item btn-group" data-behavior="notifications" data-notifications='<%= render template: "notifications/index", formats: [:json] %>'>
           <a class="dropdown-toggle nav-link" type="button" data-behavior="notifications-link" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= fa_icon "bell" %> <span data-behavior="unread-count"></span>
           </a>
